# JAI

./: .env.example  .gitignore  README.md  SETUP.md  package.json  pnpm-workspace.yaml  turbo.json
.github/: dependabot.yml
apps/api/: Dockerfile  fly.toml  nixpacks.toml  pyproject.toml  railway.toml
apps/api/src/jai_api/: __init__.py  audit.py  auth.py  config.py  db.py  main.py
apps/api/src/jai_api/graph/: builder.py  checkpointer.py  prompts.py  state.py
apps/api/src/jai_api/graph/nodes/: fast_intent.py  ingest.py  orchestrator.py  persist_memory.py  reflect.py  respond.py  retrieve_memory.py  skill_executor.py  strategize.py  tool_router.py
apps/api/src/jai_api/jobs/: consolidate.py  scheduled.py
apps/api/src/jai_api/mcp_server/: context.py  server.py
apps/api/src/jai_api/memory/: mem0.py  neo4j_client.py  qdrant.py
apps/api/src/jai_api/models/: openrouter.py  registry.py
apps/api/src/jai_api/oauth/: google.py
apps/api/src/jai_api/routes/: activity.py  audit.py  chat.py  context_ingest.py  data_sources.py  jobs.py  kpis.py  mcp_connections.py  notes.py  oauth.py  onboarding.py  schedule.py  skills.py  status.py  tasks.py  voice.py
apps/api/src/jai_api/skills/: builder.py  builtin.py  credentials.py  library_seed.py  matcher.py  registry.py  runner.py  sandbox.py
apps/api/src/jai_api/status/: aggregator.py  providers.py  types.py
apps/api/src/jai_api/tools/: builtin_tools.py  mcp_loader.py  supabase_inproc.py
apps/api/src/jai_api/voice/: stt.py  tts.py
docs/: AGENTS.md  ARCHITECTURE.md  DEPLOY.md  MEMORY.md  ROADMAP.md  SKILLS.md
infra/: docker-compose.dev.yml
scripts/: deploy.sh  dev.sh  gen-types.sh  make-icons.sh
(+85 files in other folders)
