[project]
name = "jai-api"
version = "0.1.0"
description = "JAI backend — FastAPI + LangGraph orchestrator"
requires-python = ">=3.12"
dependencies = [
  # web
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=13.1",
  "python-multipart>=0.0.12",
  # config / auth
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "pyjwt[crypto]>=2.9.0",
  "httpx>=0.27.2",
  # llm + agents
  "langchain>=0.3.7",
  "langchain-openai>=0.2.5",
  "langchain-core>=0.3.15",
  "langgraph>=0.2.45",
  "langgraph-checkpoint-postgres>=2.0.1",
  "psycopg[binary,pool]>=3.2.3",
  # memory
  "mem0ai>=0.1.30",
  "qdrant-client>=1.12.0",
  "neo4j>=5.25.0",
  # voice
  "groq>=0.11.0",
  # mcp
  "mcp>=1.0.0",
  "langchain-mcp-adapters>=0.0.3",
  # supabase
  "supabase>=2.9.0",
  # encryption for credentials
  "cryptography>=43.0.1",
  # oauth (google + state signing)
  "google-auth>=2.35.0",
  "google-auth-oauthlib>=1.2.1",
  "itsdangerous>=2.2.0",
  # ingest (PDF + ChatGPT exports)
  "pypdf>=5.1.0",
  # misc
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "orjson>=3.10.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","TCH","RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
